feat: added ZGC option